completed info.html

--- a/info.html
+++ b/info.html
@@ -6,7 +6,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-<body>
-    
+<body>  
 </body>
 </html>
+<hi> <strong>Hours and Locations</strong></hi>
+<p></p>
+<nav>
+    <ol>
+            <li><a href="index.html" title="Homepage" target="_blank">Homepage</a></li>
+            <li><a href="in-stock.html" title="Currently In Stock" target="_blank">Currently In Stock</a></li>
+            <li><a href="info.html" title="Hours and Locations" target="_blank">Hours and Locations</a></li>
+    </ol>
+</nav>
+<p></p>
+<p>The nursery is located at: 4400 Virginia Parkway, Cedarville, NC, 27165.</p>
+<p></p>
+<p>Its hours are 9 AM - 7 PM Monday - Friday, 7 AM - 7 PM on Saturday, and 1 PM - 7 PM on Sunday.</p>
